k8s/alert-logger-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alert-logger
spec:
  selector:
    app: alert-logger
  ports:
    - name: http
      port: 8080
      targetPort: 8080
